--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -37,8 +37,9 @@
       "Requirement already satisfied: matplotlib in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 3)) (3.10.1)\n",
       "Requirement already satisfied: seaborn in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 4)) (0.13.2)\n",
       "Requirement already satisfied: plotly in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 5)) (6.0.1)\n",
-      "Collecting nbformat (from -r requirements.txt (line 6))\n",
-      "  Using cached nbformat-5.10.4-py3-none-any.whl.metadata (3.6 kB)\n",
+      "Requirement already satisfied: nbformat in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 6)) (5.10.4)\n",
+      "Collecting ipywidgets (from -r requirements.txt (line 7))\n",
+      "  Downloading ipywidgets-8.1.5-py3-none-any.whl.metadata (2.3 kB)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in ./.venv/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in ./.venv/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2025.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in ./.venv/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2025.2)\n",
@@ -50,34 +51,43 @@
       "Requirement already satisfied: pillow>=8 in ./.venv/lib/python3.12/site-packages (from matplotlib->-r requirements.txt (line 3)) (11.1.0)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib->-r requirements.txt (line 3)) (3.2.3)\n",
       "Requirement already satisfied: narwhals>=1.15.1 in ./.venv/lib/python3.12/site-packages (from plotly->-r requirements.txt (line 5)) (1.33.0)\n",
-      "Collecting fastjsonschema>=2.15 (from nbformat->-r requirements.txt (line 6))\n",
-      "  Downloading fastjsonschema-2.21.1-py3-none-any.whl.metadata (2.2 kB)\n",
-      "Collecting jsonschema>=2.6 (from nbformat->-r requirements.txt (line 6))\n",
-      "  Downloading jsonschema-4.23.0-py3-none-any.whl.metadata (7.9 kB)\n",
+      "Requirement already satisfied: fastjsonschema>=2.15 in ./.venv/lib/python3.12/site-packages (from nbformat->-r requirements.txt (line 6)) (2.21.1)\n",
+      "Requirement already satisfied: jsonschema>=2.6 in ./.venv/lib/python3.12/site-packages (from nbformat->-r requirements.txt (line 6)) (4.23.0)\n",
       "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in ./.venv/lib/python3.12/site-packages (from nbformat->-r requirements.txt (line 6)) (5.7.2)\n",
       "Requirement already satisfied: traitlets>=5.1 in ./.venv/lib/python3.12/site-packages (from nbformat->-r requirements.txt (line 6)) (5.14.3)\n",
-      "Collecting attrs>=22.2.0 (from jsonschema>=2.6->nbformat->-r requirements.txt (line 6))\n",
-      "  Downloading attrs-25.3.0-py3-none-any.whl.metadata (10 kB)\n",
-      "Collecting jsonschema-specifications>=2023.03.6 (from jsonschema>=2.6->nbformat->-r requirements.txt (line 6))\n",
-      "  Downloading jsonschema_specifications-2024.10.1-py3-none-any.whl.metadata (3.0 kB)\n",
-      "Collecting referencing>=0.28.4 (from jsonschema>=2.6->nbformat->-r requirements.txt (line 6))\n",
-      "  Downloading referencing-0.36.2-py3-none-any.whl.metadata (2.8 kB)\n",
-      "Collecting rpds-py>=0.7.1 (from jsonschema>=2.6->nbformat->-r requirements.txt (line 6))\n",
-      "  Downloading rpds_py-0.24.0-cp312-cp312-macosx_10_12_x86_64.whl.metadata (4.1 kB)\n",
+      "Requirement already satisfied: comm>=0.1.3 in ./.venv/lib/python3.12/site-packages (from ipywidgets->-r requirements.txt (line 7)) (0.2.2)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in ./.venv/lib/python3.12/site-packages (from ipywidgets->-r requirements.txt (line 7)) (9.0.2)\n",
+      "Collecting widgetsnbextension~=4.0.12 (from ipywidgets->-r requirements.txt (line 7))\n",
+      "  Downloading widgetsnbextension-4.0.13-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Collecting jupyterlab-widgets~=3.0.12 (from ipywidgets->-r requirements.txt (line 7))\n",
+      "  Downloading jupyterlab_widgets-3.0.13-py3-none-any.whl.metadata (4.1 kB)\n",
+      "Requirement already satisfied: decorator in ./.venv/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (5.2.1)\n",
+      "Requirement already satisfied: ipython-pygments-lexers in ./.venv/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (1.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in ./.venv/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (0.19.2)\n",
+      "Requirement already satisfied: matplotlib-inline in ./.venv/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (0.1.7)\n",
+      "Requirement already satisfied: pexpect>4.3 in ./.venv/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (4.9.0)\n",
+      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in ./.venv/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (3.0.50)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in ./.venv/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (2.19.1)\n",
+      "Requirement already satisfied: stack_data in ./.venv/lib/python3.12/site-packages (from ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (0.6.3)\n",
+      "Requirement already satisfied: attrs>=22.2.0 in ./.venv/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat->-r requirements.txt (line 6)) (25.3.0)\n",
+      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in ./.venv/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat->-r requirements.txt (line 6)) (2024.10.1)\n",
+      "Requirement already satisfied: referencing>=0.28.4 in ./.venv/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat->-r requirements.txt (line 6)) (0.36.2)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in ./.venv/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat->-r requirements.txt (line 6)) (0.24.0)\n",
       "Requirement already satisfied: platformdirs>=2.5 in ./.venv/lib/python3.12/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat->-r requirements.txt (line 6)) (4.3.7)\n",
       "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->-r requirements.txt (line 1)) (1.17.0)\n",
-      "Collecting typing-extensions>=4.4.0 (from referencing>=0.28.4->jsonschema>=2.6->nbformat->-r requirements.txt (line 6))\n",
-      "  Downloading typing_extensions-4.13.0-py3-none-any.whl.metadata (3.0 kB)\n",
-      "Using cached nbformat-5.10.4-py3-none-any.whl (78 kB)\n",
-      "Downloading fastjsonschema-2.21.1-py3-none-any.whl (23 kB)\n",
-      "Downloading jsonschema-4.23.0-py3-none-any.whl (88 kB)\n",
-      "Downloading attrs-25.3.0-py3-none-any.whl (63 kB)\n",
-      "Downloading jsonschema_specifications-2024.10.1-py3-none-any.whl (18 kB)\n",
-      "Downloading referencing-0.36.2-py3-none-any.whl (26 kB)\n",
-      "Downloading rpds_py-0.24.0-cp312-cp312-macosx_10_12_x86_64.whl (366 kB)\n",
-      "Downloading typing_extensions-4.13.0-py3-none-any.whl (45 kB)\n",
-      "Installing collected packages: fastjsonschema, typing-extensions, rpds-py, attrs, referencing, jsonschema-specifications, jsonschema, nbformat\n",
-      "Successfully installed attrs-25.3.0 fastjsonschema-2.21.1 jsonschema-4.23.0 jsonschema-specifications-2024.10.1 nbformat-5.10.4 referencing-0.36.2 rpds-py-0.24.0 typing-extensions-4.13.0\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in ./.venv/lib/python3.12/site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (0.8.4)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in ./.venv/lib/python3.12/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in ./.venv/lib/python3.12/site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (0.2.13)\n",
+      "Requirement already satisfied: typing-extensions>=4.4.0 in ./.venv/lib/python3.12/site-packages (from referencing>=0.28.4->jsonschema>=2.6->nbformat->-r requirements.txt (line 6)) (4.13.0)\n",
+      "Requirement already satisfied: executing>=1.2.0 in ./.venv/lib/python3.12/site-packages (from stack_data->ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (2.2.0)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in ./.venv/lib/python3.12/site-packages (from stack_data->ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (3.0.0)\n",
+      "Requirement already satisfied: pure-eval in ./.venv/lib/python3.12/site-packages (from stack_data->ipython>=6.1.0->ipywidgets->-r requirements.txt (line 7)) (0.2.3)\n",
+      "Downloading ipywidgets-8.1.5-py3-none-any.whl (139 kB)\n",
+      "Downloading jupyterlab_widgets-3.0.13-py3-none-any.whl (214 kB)\n",
+      "Downloading widgetsnbextension-4.0.13-py3-none-any.whl (2.3 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.3/2.3 MB\u001b[0m \u001b[31m24.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: widgetsnbextension, jupyterlab-widgets, ipywidgets\n",
+      "Successfully installed ipywidgets-8.1.5 jupyterlab-widgets-3.0.13 widgetsnbextension-4.0.13\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -88,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +107,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "from IPython.display import display, Markdown"
    ]
   },
   {
@@ -160,73 +171,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calcular_aporte_mensal(montante_desejado, anos, taxa_juros_anual=0.07):\n",
-    "    # Conversão da taxa anual para mensal (taxa efetiva)\n",
-    "    i = (1 + taxa_juros_anual) ** (1/12) - 1\n",
+    "def gerar_dados(montante_desejado, anos, taxa_juros_anual):\n",
+    "    i = (1 + taxa_juros_anual) ** (1 / 12) - 1\n",
     "    n = anos * 12\n",
-    "\n",
-    "    # Cálculo do aporte mensal necessário\n",
     "    R = montante_desejado * i / ((1 + i) ** n - 1)\n",
-    "\n",
-    "    # Gerar evolução do montante mês a mês\n",
     "    meses = np.arange(1, n + 1)\n",
     "    montantes = R * ((1 + i) ** meses - 1) / i\n",
-    "\n",
-    "    # Criar DataFrame para o gráfico\n",
     "    df = pd.DataFrame({\n",
     "        'Mês': meses,\n",
-    "        'Montante Acumulado (R$)': montantes\n",
+    "        'Montante Acumulado (R$)': montantes,\n",
+    "        'Prazo (anos)': f'{anos} anos'\n",
     "    })\n",
-    "\n",
-    "    # Exibir o valor do aporte mensal\n",
-    "    print(f\"Aporte mensal necessário para alcançar R$ {montante_desejado:,.2f} em {anos} anos:\")\n",
-    "    print(f\"R$ {R:.2f} por mês\\n\")\n",
-    "\n",
-    "    # Gráfico com plotly.express\n",
-    "    fig = px.line(df, x='Mês', y='Montante Acumulado (R$)',\n",
-    "                  title=f'Evolução do Montante para Meta de R$ {montante_desejado:,.2f}',\n",
-    "                  markers=True)\n",
-    "    fig.update_layout(template='plotly_white')\n",
-    "    fig.show()\n",
-    "\n",
-    "    return R\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aporte mensal necessário para alcançar R$ 30,000.00 em 7 anos:\n",
-      "R$ 280.01 por mês\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Mime type rendering requires nbformat>=4.2.0 but it is not installed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m A = \u001b[43mcalcular_aporte_mensal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmontante_desejado\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m30000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43manos\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m7\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 28\u001b[39m, in \u001b[36mcalcular_aporte_mensal\u001b[39m\u001b[34m(montante_desejado, anos, taxa_juros_anual)\u001b[39m\n\u001b[32m     24\u001b[39m fig = px.line(df, x=\u001b[33m'\u001b[39m\u001b[33mMês\u001b[39m\u001b[33m'\u001b[39m, y=\u001b[33m'\u001b[39m\u001b[33mMontante Acumulado (R$)\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     25\u001b[39m               title=\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mEvolução do Montante para Meta de R$ \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmontante_desejado\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m,.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m,\n\u001b[32m     26\u001b[39m               markers=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     27\u001b[39m fig.update_layout(template=\u001b[33m'\u001b[39m\u001b[33mplotly_white\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m \u001b[43mfig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshow\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m R\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projeto1_prog_fin/.venv/lib/python3.12/site-packages/plotly/basedatatypes.py:3414\u001b[39m, in \u001b[36mBaseFigure.show\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   3381\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   3382\u001b[39m \u001b[33;03mShow a figure using either the default renderer(s) or the renderer(s)\u001b[39;00m\n\u001b[32m   3383\u001b[39m \u001b[33;03mspecified by the renderer argument\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m   3410\u001b[39m \u001b[33;03mNone\u001b[39;00m\n\u001b[32m   3411\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   3412\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mio\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpio\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m3414\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshow\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projeto1_prog_fin/.venv/lib/python3.12/site-packages/plotly/io/_renderers.py:425\u001b[39m, in \u001b[36mshow\u001b[39m\u001b[34m(fig, renderer, validate, **kwargs)\u001b[39m\n\u001b[32m    420\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    421\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mMime type rendering requires ipython but it is not installed\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    422\u001b[39m     )\n\u001b[32m    424\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m nbformat \u001b[38;5;129;01mor\u001b[39;00m Version(nbformat.__version__) < Version(\u001b[33m\"\u001b[39m\u001b[33m4.2.0\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m425\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    426\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mMime type rendering requires nbformat>=4.2.0 but it is not installed\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    427\u001b[39m     )\n\u001b[32m    429\u001b[39m display_jupyter_version_warnings()\n\u001b[32m    431\u001b[39m ipython_display.display(bundle, raw=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[31mValueError\u001b[39m: Mime type rendering requires nbformat>=4.2.0 but it is not installed"
-     ]
-    }
-   ],
-   "source": [
-    "A = calcular_aporte_mensal(montante_desejado=30000, anos=7)\n"
+    "    return R, df"
    ]
   },
   {
@@ -234,7 +194,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calcular_para_varios_anos_matplotlib(montante_desejado, anos_lista, taxa_juros_anual=0.07):\n",
+    "    resultados = {}\n",
+    "    dfs = []\n",
+    "\n",
+    "    for anos in anos_lista:\n",
+    "        R, df = gerar_dados(montante_desejado, anos, taxa_juros_anual)\n",
+    "        resultados[anos] = R\n",
+    "        dfs.append(df)\n",
+    "\n",
+    "        # Print dos aportes\n",
+    "        display(Markdown(f\"**{anos} anos** → R$ {R:.2f} por mês\"))\n",
+    "\n",
+    "        # Gráfico individual\n",
+    "        plt.figure(figsize=(8, 4))\n",
+    "        plt.plot(df['Mês'], df['Montante Acumulado (R$)'], label=f'{anos} anos')\n",
+    "        plt.title(f'Evolução do Montante - {anos} anos')\n",
+    "        plt.xlabel('Meses')\n",
+    "        plt.ylabel('Montante Acumulado (R$)')\n",
+    "        plt.grid(True)\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "\n",
+    "    # Gráfico combinado com todos os anos\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    for df in dfs:\n",
+    "        label = df['Prazo (anos)'].iloc[0]\n",
+    "        plt.plot(df['Mês'], df['Montante Acumulado (R$)'], label=label)\n",
+    "    plt.title(f'Evolução do Montante para Meta de R$ {montante_desejado:,.2f} - Todos os Prazos')\n",
+    "    plt.xlabel('Meses')\n",
+    "    plt.ylabel('Montante Acumulado (R$)')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "    return resultados"
+   ]
   }
  ],
  "metadata": {
