--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2963,50 +2963,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gerar_dados(montante_desejado, anos, taxa_juros_anual):\n",
-    "    i = (1 + taxa_juros_anual) ** (1 / 12) - 1\n",
+    "def gerar_dados(montante_desejado, anos, taxa_juros_anual, aliquota_ir=0):\n",
+    "    # Aplica o imposto na taxa de juros\n",
+    "    taxa_juros_anual_liquida = taxa_juros_anual * (1 - aliquota_ir)\n",
+    "\n",
+    "    # Converte a taxa anual líquida para taxa efetiva mensal\n",
+    "    i = (1 + taxa_juros_anual_liquida) ** (1 / 12) - 1\n",
     "    n = anos * 12\n",
+    "\n",
+    "    # Cálculo da parcela mensal (R)\n",
     "    R = montante_desejado * i / ((1 + i) ** n - 1)\n",
+    "\n",
+    "    # Montantes acumulados mês a mês\n",
     "    meses = np.arange(1, n + 1)\n",
     "    montantes = R * ((1 + i) ** meses - 1) / i\n",
+    "\n",
+    "    # DataFrame\n",
     "    df = pd.DataFrame({\n",
     "        'Mês': meses,\n",
     "        'Montante Acumulado (R$)': montantes,\n",
     "        'Prazo (anos)': f'{anos} anos'\n",
     "    })\n",
+    "\n",
     "    return R, df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calcular_para_varios_anos_plotly(montante_desejado, anos_lista, taxa_juros_anual=0.07):\n",
+    "def calcular_para_varios_anos_plotly(montante_desejado, anos_lista, taxa_juros_anual=0.07, aliquota_ir=0):\n",
     "    resultados = {}\n",
     "    dfs = []\n",
     "\n",
     "    for anos in anos_lista:\n",
-    "        R, df = gerar_dados(montante_desejado, anos, taxa_juros_anual)\n",
+    "        R, df = gerar_dados(montante_desejado, anos, taxa_juros_anual, aliquota_ir)\n",
     "        resultados[anos] = R\n",
     "        dfs.append(df)\n",
     "\n",
-    "        # Print dos aportes\n",
-    "        display(Markdown(f\"**{anos} anos** → R$ {R:.2f} por mês\"))\n",
+    "        display(Markdown(f\"**{anos} anos** → R$ {R:.2f}\"))\n",
     "\n",
-    "        # Gráfico individual com Plotly\n",
     "        fig = px.line(df, x='Mês', y='Montante Acumulado (R$)',\n",
     "                      title=f'Evolução do Montante - {anos} anos',\n",
     "                      markers=True)\n",
     "        fig.update_layout(template='plotly_white')\n",
     "        fig.show()\n",
     "\n",
-    "    # Gráfico combinado com todos os anos\n",
     "    df_total = pd.concat(dfs, ignore_index=True)\n",
     "    fig_total = px.line(df_total, x='Mês', y='Montante Acumulado (R$)', color='Prazo (anos)',\n",
     "                        title=f'Evolução do Montante para Meta de R$ {montante_desejado:,.2f} - Todos os Prazos',\n",
@@ -3014,7 +3022,7 @@
     "    fig_total.update_layout(template='plotly_white')\n",
     "    fig_total.show()\n",
     "\n",
-    "    return resultados"
+    "    return resultados\n"
    ]
   },
   {
@@ -3026,13 +3034,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "**7 anos** → R$ 280.01 por mês"
+       "**7 anos** → R$ 280.01"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -4091,7 +4099,7 @@
     {
      "data": {
       "text/markdown": [
-       "**10 anos** → R$ 175.39 por mês"
+       "**10 anos** → R$ 175.39"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -5222,7 +5230,7 @@
     {
      "data": {
       "text/markdown": [
-       "**12 anos** → R$ 135.46 por mês"
+       "**12 anos** → R$ 135.46"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -8026,7 +8034,7 @@
        "{7: 280.0091587617208, 10: 175.38553851336093, 12: 135.46198770024267}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8034,16 +8042,25 @@
    "source": [
     "calcular_para_varios_anos_plotly(\n",
     "    montante_desejado=30000,\n",
-    "    anos_lista=[7, 10, 12]\n",
-    ")\n",
-    "\n"
+    "    anos_lista=[7, 10, 12],\n",
+    "    taxa_juros_anual=0.07,\n",
+    "    aliquota_ir=0 \n",
+    ")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observa-se que o valor de aporte necessário diminui conforme o tempo passa, exemplificando a potencialidade do tempo. Sendo utilizado a fórmula de valor futuro de uma série uniforme postecipada capitalizada mensalmente. Consideramos um aporte financeiro mensal, para se enquadrar com maior realidade na vida comum das pessoas, visto que o pagamento são mensal e destinam um parcela de sua renda para investimento.\n",
+    "### Premissas:\n",
+    " Sendo utilizado a fórmula de valor futuro de uma série uniforme postecipada capitalizada mensalmente, sendo assim foi feito a conversão da taxa de juros anual para mensal. \n",
+    " \n",
+    " Consideramos um aporte financeiro mensal, pois grande parte da população recebe sua renda mensalmente e destina parte dela para investimento.\n",
+    "\n",
+    " Outro detalhe, pelo fato do enunciado tratar como taxa de juros real efetiva, não será incluso taxa de impostos e/ou de administração porque pode variar com o tipo de investimento.\n",
+    "\n",
+    "### Análise:\n",
+    "Observa-se que o valor de aporte necessário diminui conforme o tempo passa, exemplificando a potencialidade do tempo.\n",
     "\n",
     "**Quanto maior o tempo, maior o efeito dos juros, e menor o aporte necessário.**\n",
     "\n",
@@ -8065,13 +8082,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "**7 anos** → R$ 466.68 por mês"
+       "**7 anos** → R$ 466.68"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -9130,7 +9147,7 @@
     {
      "data": {
       "text/markdown": [
-       "**10 anos** → R$ 292.31 por mês"
+       "**10 anos** → R$ 292.31"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -10261,7 +10278,7 @@
     {
      "data": {
       "text/markdown": [
-       "**12 anos** → R$ 225.77 por mês"
+       "**12 anos** → R$ 225.77"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -13058,13 +13075,25 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{7: 466.68193126953474, 10: 292.3092308556016, 12: 225.76997950040445}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "b = calcular_para_varios_anos_plotly(\n",
+    "calcular_para_varios_anos_plotly(\n",
     "    montante_desejado=50000,\n",
-    "    anos_lista=[7, 10, 12]\n",
-    ")"
+    "    anos_lista=[7, 10, 12],\n",
+    "    taxa_juros_anual=0.07,\n",
+    "    aliquota_ir=0 \n",
+    ")\n"
    ]
   },
   {
@@ -13093,13 +13122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "**7 anos** → R$ 933.36 por mês"
+       "**7 anos** → R$ 933.36"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -14158,7 +14187,7 @@
     {
      "data": {
       "text/markdown": [
-       "**10 anos** → R$ 584.62 por mês"
+       "**10 anos** → R$ 584.62"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -15289,7 +15318,7 @@
     {
      "data": {
       "text/markdown": [
-       "**12 anos** → R$ 451.54 por mês"
+       "**12 anos** → R$ 451.54"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -18086,13 +18115,25 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{7: 933.3638625390695, 10: 584.6184617112032, 12: 451.5399590008089}"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "c = calcular_para_varios_anos_plotly(\n",
+    "calcular_para_varios_anos_plotly(\n",
     "    montante_desejado=100000,\n",
-    "    anos_lista=[7, 10, 12]\n",
-    ")"
+    "    anos_lista=[7, 10, 12],\n",
+    "    taxa_juros_anual=0.07,\n",
+    "    aliquota_ir=0 \n",
+    ")\n"
    ]
   },
   {
@@ -18120,7 +18161,11 @@
     "\n",
     "Quanto maior o juros real efetivo, menor será o valor do aporte financeiro.\n",
     "\n",
-    "Quanto maior o tempo de espera para obter o montante, menor será o valor do aporte financeiro."
+    "Quanto maior o tempo de espera para obter o montante, menor será o valor do aporte financeiro.\n",
+    "\n",
+    "Quanto maior as taxas de administração e/ou impostos, menor será o valor do aporte financeiro.\n",
+    "\n",
+    "Quanto maior a frequência da capitalização e/ou do aporte financeiro, menor será o valor do aporte financeiro."
    ]
   }
  ],
