--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1399,8 +1399,7 @@
     "    \"Banco Caixa Geral\": 0.1462\n",
     "}\n",
     "\n",
-    "analisar_cdbs_evolucao(cdbs, aporte_inicial=10000, meses=24, ir_percentual=0.175)\n",
-    "\n"
+    "analisar_cdbs_evolucao(cdbs, aporte_inicial=10000, meses=24, ir_percentual=0.175)\n"
    ]
   },
   {
@@ -1475,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1549,6 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          0,
           1,
           2,
           3,
@@ -1669,7 +1667,8 @@
           116,
           117,
           118,
-          119
+          119,
+          120
          ],
          "xaxis": "x",
          "y": [
@@ -1812,7 +1811,6 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          0,
           1,
           2,
           3,
@@ -1931,7 +1929,8 @@
           116,
           117,
           118,
-          119
+          119,
+          120
          ],
          "xaxis": "x",
          "y": [
@@ -2917,6 +2916,9 @@
     "valores_ipca_mensal = montante_ipca[::30]\n",
     "valores_prefixado_mensal = montante_prefixado[::30]\n",
     "\n",
+    "# Criar array de meses correspondente aos valores mensais\n",
+    "meses = np.arange(1, len(valores_ipca_mensal) + 1)\n",
+    "\n",
     "# DataFrame para gráfico\n",
     "df_plot = pd.DataFrame({\n",
     "    'Meses': meses,\n",
@@ -2962,8 +2964,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Premissas:\n",
+    " Sendo utilizado a fórmula de valor futuro de uma série uniforme postecipada capitalizada mensalmente, sendo assim foi feito a conversão da taxa de juros anual para mensal. \n",
+    " \n",
+    " Consideramos um aporte financeiro mensal, pois grande parte da população recebe sua renda mensalmente e destina parte dela para investimento e ao final obtemos o valor da aplicação total.\n",
+    "\n",
+    " Outro detalhe, pelo fato do enunciado tratar como taxa de juros real efetiva, não será incluso taxa de impostos e/ou de administração porque pode variar com o tipo de investimento."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2994,7 +3008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3007,7 +3021,7 @@
     "        resultados[anos] = R\n",
     "        dfs.append(df)\n",
     "\n",
-    "        display(Markdown(f\"**{anos} anos** → R$ {R:.2f}\"))\n",
+    "        display(Markdown(f\"**{anos} anos** → parcela mensal R$ {R:.2f} e aporte total R$ {R * anos * 12:.2f}\"))\n",
     "\n",
     "        fig = px.line(df, x='Mês', y='Montante Acumulado (R$)',\n",
     "                      title=f'Evolução do Montante - {anos} anos',\n",
@@ -3034,13 +3048,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "**7 anos** → R$ 280.01"
+       "**7 anos** → parcela mensal R$ 280.01 e aporte total R$ 23520.77"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -4099,7 +4113,7 @@
     {
      "data": {
       "text/markdown": [
-       "**10 anos** → R$ 175.39"
+       "**10 anos** → parcela mensal R$ 175.39 e aporte total R$ 21046.26"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -5230,7 +5244,7 @@
     {
      "data": {
       "text/markdown": [
-       "**12 anos** → R$ 135.46"
+       "**12 anos** → parcela mensal R$ 135.46 e aporte total R$ 19506.53"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -8034,7 +8048,7 @@
        "{7: 280.0091587617208, 10: 175.38553851336093, 12: 135.46198770024267}"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8052,25 +8066,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Premissas:\n",
-    " Sendo utilizado a fórmula de valor futuro de uma série uniforme postecipada capitalizada mensalmente, sendo assim foi feito a conversão da taxa de juros anual para mensal. \n",
-    " \n",
-    " Consideramos um aporte financeiro mensal, pois grande parte da população recebe sua renda mensalmente e destina parte dela para investimento.\n",
-    "\n",
-    " Outro detalhe, pelo fato do enunciado tratar como taxa de juros real efetiva, não será incluso taxa de impostos e/ou de administração porque pode variar com o tipo de investimento.\n",
-    "\n",
-    "### Análise:\n",
+    "### 📊 Análise:\n",
     "Observa-se que o valor de aporte necessário diminui conforme o tempo passa, exemplificando a potencialidade do tempo.\n",
     "\n",
     "**Quanto maior o tempo, maior o efeito dos juros, e menor o aporte necessário.**\n",
     "\n",
-    "Dessa forma, para alcançar a marca de R$30 mil, é necessário:\n",
+    "Dessa forma, para alcançar a marca de R$ 30 mil, é necessário:\n",
     "\n",
-    "Aportes mensais de R$280 reais, caso almeje atingir o montante em sete anos.\n",
+    "Aportes mensais de R$ 280 reais e total de R$ 23,5 mil, caso almeje atingir o montante em sete anos.\n",
     "\n",
-    "Aportes mensais de R$175.38 reais, caso o tempo alvo seja de dez anos.\n",
+    "Aportes mensais de R$ 175.38 reais e total de R$ 21 mil, caso o tempo alvo seja de dez anos.\n",
     "\n",
-    "E aportes mensais de R$135.46, caso o horizonte temporal seja de doze anos."
+    "E aportes mensais de R$ 135.46 e total de R$ 19,5 mil, caso o horizonte temporal seja de doze anos."
    ]
   },
   {
@@ -8082,13 +8089,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "**7 anos** → R$ 466.68"
+       "**7 anos** → parcela mensal R$ 466.68 e aporte total R$ 39201.28"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -9147,7 +9154,7 @@
     {
      "data": {
       "text/markdown": [
-       "**10 anos** → R$ 292.31"
+       "**10 anos** → parcela mensal R$ 292.31 e aporte total R$ 35077.11"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -10278,7 +10285,7 @@
     {
      "data": {
       "text/markdown": [
-       "**12 anos** → R$ 225.77"
+       "**12 anos** → parcela mensal R$ 225.77 e aporte total R$ 32510.88"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -13082,7 +13089,7 @@
        "{7: 466.68193126953474, 10: 292.3092308556016, 12: 225.76997950040445}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13100,17 +13107,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A premissa para a questão B – e para a C – será a mesma que para a questão A: \n",
+    "### 📊  Análise:\n",
+    "\n",
     "\n",
     "**Quanto maior o tempo, maior o efeito dos juros sobre o montante, e menor a necessidade de aporte**\n",
     "\n",
     "Nesse caso, o objetivo é alcançar R$50 mil reais, que aos juros de 7% ao ano necessitará:\n",
     "\n",
-    "De aportes mensais de R$466.68 em sete anos.\n",
+    "De aportes mensais de R$466.68 e total de R$ 39,2 mil em sete anos.\n",
     "\n",
-    "Aportes mensais de R$292.31 em dez anos.\n",
+    "Aportes mensais de R$292.31 e total de R$ 35 mil em dez anos.\n",
     "\n",
-    "E aportes mensais de R$225.77 em dozes anos"
+    "E aportes mensais de R$225.77 e total de R$ 32,5 mil em dozes anos"
    ]
   },
   {
@@ -13122,13 +13130,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "**7 anos** → R$ 933.36"
+       "**7 anos** → parcela mensal R$ 933.36 e aporte total R$ 78402.56"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -14187,7 +14195,7 @@
     {
      "data": {
       "text/markdown": [
-       "**10 anos** → R$ 584.62"
+       "**10 anos** → parcela mensal R$ 584.62 e aporte total R$ 70154.22"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -15318,7 +15326,7 @@
     {
      "data": {
       "text/markdown": [
-       "**12 anos** → R$ 451.54"
+       "**12 anos** → parcela mensal R$ 451.54 e aporte total R$ 65021.75"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -18122,7 +18130,7 @@
        "{7: 933.3638625390695, 10: 584.6184617112032, 12: 451.5399590008089}"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18140,22 +18148,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 📊 Análise:\n",
+    "\n",
+    "\n",
     "**Quanto maior o tempo, maior o efeito dos juros sobre o montante, e menor a necessidade de aporte**\n",
     "\n",
     "Nesse caso, o objetivo é alcançar R$50 mil reais, que aos juros de 7% ao ano necessitará:\n",
     "\n",
-    "De aportes mensais de R$ 933.36 em sete anos.\n",
+    "De aportes mensais de R$ 933.36 e total de R$ 78,4 mil em sete anos.\n",
     "\n",
-    "Aportes mensais de R$ 584.62  em dez anos.\n",
+    "Aportes mensais de R$ 584.62 e total de R$ 70,2 mil em dez anos.\n",
     "\n",
-    "E aportes mensais de R$ 451.54 em dozes anos"
+    "E aportes mensais de R$ 451.54 e total de R$ 65 mil em dozes anos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusão:\n",
+    "## 🏆 Conclusão:\n",
     "\n",
     "Quanto maior o montante futuro desejado, maior será o valor do aporte financeiro.\n",
     "\n",
