--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2977,7 +2977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3008,35 +3008,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calcular_para_varios_anos_plotly(montante_desejado, anos_lista, taxa_juros_anual=0.07, aliquota_ir=0):\n",
-    "    resultados = {}\n",
-    "    dfs = []\n",
+    "    resultados = {}  # Dicionário para guardar o valor da parcela mensal para cada prazo\n",
+    "    dfs = []  # Lista para acumular os DataFrames de cada prazo\n",
     "\n",
     "    for anos in anos_lista:\n",
-    "        R, df = gerar_dados(montante_desejado, anos, taxa_juros_anual, aliquota_ir)\n",
-    "        resultados[anos] = R\n",
-    "        dfs.append(df)\n",
+    "        R, df = gerar_dados(montante_desejado, anos, taxa_juros_anual, aliquota_ir)  # Gera os dados para cada prazo\n",
+    "        resultados[anos] = R  \n",
+    "        dfs.append(df) \n",
     "\n",
+    "        # Mostra a parcela mensal e o total aportado para o prazo atual\n",
     "        display(Markdown(f\"**{anos} anos** → parcela mensal R$ {R:.2f} e aporte total R$ {R * anos * 12:.2f}\"))\n",
     "\n",
+    "        # Gráfico da evolução do montante acumulado para o prazo atual\n",
     "        fig = px.line(df, x='Mês', y='Montante Acumulado (R$)',\n",
     "                      title=f'Evolução do Montante - {anos} anos',\n",
     "                      markers=True)\n",
     "        fig.update_layout(template='plotly_white')\n",
     "        fig.show()\n",
     "\n",
+    "    # Junta todos os DataFrames para o gráfico comparativo\n",
     "    df_total = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "    # Gráfico comparativo da evolução do montante para todos os prazos\n",
     "    fig_total = px.line(df_total, x='Mês', y='Montante Acumulado (R$)', color='Prazo (anos)',\n",
     "                        title=f'Evolução do Montante para Meta de R$ {montante_desejado:,.2f} - Todos os Prazos',\n",
     "                        markers=True)\n",
     "    fig_total.update_layout(template='plotly_white')\n",
     "    fig_total.show()\n",
     "\n",
-    "    return resultados\n"
+    "    return resultados \n",
+    "\n"
    ]
   },
   {
@@ -3048,7 +3054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -8048,7 +8054,7 @@
        "{7: 280.0091587617208, 10: 175.38553851336093, 12: 135.46198770024267}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8089,7 +8095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -13089,7 +13095,7 @@
        "{7: 466.68193126953474, 10: 292.3092308556016, 12: 225.76997950040445}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13130,7 +13136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -18130,7 +18136,7 @@
        "{7: 933.3638625390695, 10: 584.6184617112032, 12: 451.5399590008089}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
