--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-15T02:03:11.810145Z",
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "#pip install -r requirements.txt"
+    "pip install -r requirements.txt"
    ]
   },
   {
